k8s/apps/monitoring/grafana/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: monitoring
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 12.2.0
    helm.sh/chart: grafana-10.1.2
  name: monitoring-grafana
  namespace: monitoring
spec:
  clusterIP: 10.107.44.108
  clusterIPs:
  - 10.107.44.108
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    port: 80
    targetPort: grafana
  selector:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
